fix: 폼 로고 img width, height 설정 (layout shift 방지)

--- a/styles/common.css
+++ b/styles/common.css
@@ -89,8 +89,12 @@ a[class*="btn"] {
 }
 
 .form-logo {
-  width: 24.75rem;
+  width: 198px;
   margin: 14.375rem 0 2.5rem;
+}
+
+.form-logo img {
+  height: auto;
 }
 
 .form-contents {
