--- a/styles/style.css
+++ b/styles/style.css
@@ -199,6 +199,9 @@
   .form {
     width: 40rem;
   }
+  .form-logo {
+    width: 396px;
+  }
 }
 
 @media (min-width: 768px) {
